--- a/index.html
+++ b/index.html
@@ -26,20 +26,111 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#" id="nav-home"><i class="bi bi-house me-1"></i>Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" id="nav-create-item">
                             <a class="nav-link" href="#" id="nav-create"><i class="bi bi-plus-circle me-1"></i>Create Event</a>
+                        </li>
+                        <li class="nav-item" id="nav-login-item">
+                            <a class="nav-link" href="#" id="nav-login"><i class="bi bi-box-arrow-in-right me-1"></i>Login</a>
+                        </li>
+                        <li class="nav-item d-none" id="nav-user-item">
+                            <span class="nav-link text-light" id="nav-user-name"></span>
+                        </li>
+                        <li class="nav-item d-none" id="nav-logout-item">
+                            <a class="nav-link" href="#" id="nav-logout"><i class="bi bi-box-arrow-right me-1"></i>Logout</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
+        <!-- Login Page -->
+        <div id="login-page" class="page">
+            <div class="container py-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-5">
+                        <div class="card shadow-lg border-0">
+                            <div class="card-body p-4 p-md-5">
+                                <h2 class="text-center mb-4 fw-bold">Login</h2>
+                                <form id="login-form">
+                                    <div class="mb-3">
+                                        <label for="login-email" class="form-label">Email</label>
+                                        <input type="email" class="form-control" id="login-email" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="login-password" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="login-password" required>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary w-100 mb-3">
+                                        <i class="bi bi-box-arrow-in-right me-2"></i>Login
+                                    </button>
+                                </form>
+                                <div class="text-center">
+                                    <p class="mb-0">Don't have an account? <a href="#" id="switch-to-signup">Sign up</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Signup Page -->
+        <div id="signup-page" class="page">
+            <div class="container py-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-5">
+                        <div class="card shadow-lg border-0">
+                            <div class="card-body p-4 p-md-5">
+                                <h2 class="text-center mb-4 fw-bold">Sign Up</h2>
+                                <form id="signup-form">
+                                    <div class="mb-3">
+                                        <label for="signup-name" class="form-label">Name</label>
+                                        <input type="text" class="form-control" id="signup-name" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="signup-email" class="form-label">Email</label>
+                                        <input type="email" class="form-control" id="signup-email" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="signup-password" class="form-label">Password</label>
+                                        <input type="password" class="form-control" id="signup-password" required minlength="6">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary w-100 mb-3">
+                                        <i class="bi bi-person-plus me-2"></i>Sign Up
+                                    </button>
+                                </form>
+                                <div class="text-center">
+                                    <p class="mb-0">Already have an account? <a href="#" id="switch-to-login">Login</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Home Page -->
-        <div id="home-page" class="page active">
+        <div id="home-page" class="page">
             <div class="container py-5">
                 <div class="text-center mb-5">
                     <h1 class="display-4 fw-bold mb-3">Welcome to EventRSVP</h1>
                     <p class="lead text-muted">Create beautiful events and manage RSVPs effortlessly</p>
+                </div>
+
+                <!-- Event Filter Tabs -->
+                <div class="mb-4 d-none" id="event-filter-tabs">
+                    <ul class="nav nav-pills justify-content-center" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="my-events-tab" data-bs-toggle="pill" data-bs-target="#my-events" type="button" role="tab">
+                                <i class="bi bi-calendar-event me-2"></i>My Events
+                            </button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="invited-events-tab" data-bs-toggle="pill" data-bs-target="#invited-events" type="button" role="tab">
+                                <i class="bi bi-envelope-check me-2"></i>Invited Events
+                            </button>
+                        </li>
+                    </ul>
                 </div>
                 
                 <div class="row g-4 mb-4" id="event-list">
@@ -73,12 +164,16 @@
                                 <!-- Theme Selection -->
                                 <div class="mb-4">
                                     <label class="form-label fw-semibold mb-3">Theme</label>
-                                    <div class="btn-group w-100" role="group">
-                                        <button type="button" class="btn btn-outline-primary theme-btn active" data-theme="classic">Classic</button>
-                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="eclectic">Eclectic</button>
-                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="fancy">Fancy</button>
-                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="elegant">Elegant</button>
-                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="simple">Simple</button>
+                                    <div class="theme-selector-grid">
+                                        <button type="button" class="btn btn-outline-primary theme-btn active" data-theme="base">Base</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="mono">Mono</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="cosmic-night">Cosmic Night</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="soft-pop">Soft Pop</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="neo-brutalism">Neo Brutalism</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="vintage-paper">Vintage Paper</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="modern-minimal">Modern Minimal</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="bubblegum">Bubblegum</button>
+                                        <button type="button" class="btn btn-outline-primary theme-btn" data-theme="violet-bloom">Violet Bloom</button>
                                     </div>
                                 </div>
 
@@ -231,6 +326,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="auth.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
