--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="app">
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+        <nav class="navbar navbar-expand-lg navbar-light shadow-sm" style="background-color: var(--light-green);">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="#" id="nav-home-brand">
                     <i class="bi bi-calendar-event me-2"></i>EventRSVP
